fix overflow-x: hidden;

--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -4,6 +4,7 @@
   letter-spacing: 0.03em;
   color: $primary-text-color;
   background-color: $primary-white-color;
+  overflow-x: hidden;
 }
 
 .container {
